k8s/base/00-common.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ode
  labels:
    name: ode
    project: ode
